objects/TFN__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNIS__c</fullName>
        <label>DNIS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Company__c</fullName>
        <label>Operating Company</label>
        <referenceTo>Operating_Company__c</referenceTo>
        <relationshipLabel>Toll Free Number</relationshipLabel>
        <relationshipName>Toll_Free_Number</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Toll_Free_Number__c</fullName>
        <label>Toll Free Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>TFN</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TFN-{0000}</displayFormat>
        <label>TFN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Toll Free Number</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>